# pipewire-rs

./: .gitignore
libspa/: Cargo.toml  wrapper.h
libspa-sys/: Cargo.toml
libspa-sys/src/: bindings.rs
libspa/src/: drm.rs  lib.rs
libspa/src/buffer/: meta.rs  mod.rs
libspa/src/param/: mod.rs
libspa/src/pod/: deserialize.rs  mod.rs
pipewire/: Cargo.toml
pipewire-sys/: wrapper.h
pipewire-sys/src/: bindings.rs
pipewire/examples/: data_loop.rs
pipewire/src/: buffer.rs  error.rs  lib.rs  loop_.rs  stream.rs
pipewire/src/async_v/: buffer.rs  context.rs  core.rs  mod.rs  node.rs  registry.rs  stream.rs  utils.rs
pipewire/src/loop_/: data_loop.rs  mod.rs  owned.rs  ref_.rs  sources.rs  traits.rs
pipewire/src/stream/: flags.rs  listener.rs  mod.rs  state.rs  stream.rs
