[package]
name = "pipewire"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
categories.workspace = true
description = "Rust bindings for PipeWire"
repository.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/pipewire/"
keywords = ["pipewire", "multimedia", "audio", "video"]

[dependencies]
pw_sys = { package = "pipewire-sys", version = "0.8", path = "../pipewire-sys" }
spa_sys = { package = "libspa-sys", version = "0.8", path = "../libspa-sys" }
spa = { package = "libspa", version = "0.8", path = "../libspa" }
anyhow = "1"
thiserror = "2.0.12"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "fs"] }
bitflags = "2"
once_cell = "1.0"
# Async feature dependencies - marked as optional
futures = { version = "0.3.31", optional = true }
pin-project = { version = "1.1.4", optional = true }
tokio = { version = "1.44.2", features = ["full"] }
rand = "0.9.1"

[dev-dependencies]
clap = { version = "4.3.2", features = ["derive"] }
once_cell = "1.5"

[features]
v0_3_32 = []
v0_3_33 = ["spa/v0_3_33", "v0_3_32"]
v0_3_34 = ["v0_3_33"]
v0_3_39 = ["v0_3_34"]
v0_3_40 = ["v0_3_39"]
v0_3_41 = ["v0_3_40"]
v0_3_43 = ["v0_3_41"]
v0_3_44 = ["v0_3_43"]
v0_3_45 = ["v0_3_44"]
v0_3_49 = ["v0_3_45"]
v0_3_53 = ["v0_3_49"]
v0_3_57 = ["v0_3_53"]
v0_3_64 = ["v0_3_57"]
v0_3_65 = ["v0_3_40", "spa_sys/v0_3_65"]
v0_3_68 = ["v0_3_65"]
v0_3_75 = ["v0_3_68"]
v0_3_77 = ["v0_3_75"]

# Async support feature flag
async = ["dep:futures", "dep:pin-project"]
